--- a/packages/app/src/AppModule/screen/auth/register.css
+++ b/packages/app/src/AppModule/screen/auth/register.css
@@ -1,4 +1,4 @@
-/*#loginPage::before {*/
+/*#registerPage::before {*/
 /*  background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 250 250' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='3.14' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='250' height='250' filter='url(%23noiseFilter)'/%3E%3C/svg%3E");*/
 /*  content: ' ';*/
 /*  display: block;*/
@@ -11,12 +11,12 @@
 /*  opacity: 0.2;*/
 /*}*/
 
-#loginPage {
+#registerPage {
   text-align: center;
   padding-top: 5em;
   min-height: 100vh;
 }
-#loginPage small {
+#registerPage small {
   color: #000A;
 }
 
