--- a/packages/app/src/AppModule/global.css
+++ b/packages/app/src/AppModule/global.css
@@ -24,12 +24,14 @@ textarea, input {
   cursor: pointer;
 }
 
+input,
 textarea {
   border: 1px solid var(--border-color);
   border-radius: 0.5em;
   padding: 0.5em 0.75em;
 }
 
+.btn,
 button {
   background: var(--color-forground);
   color: #fff;
@@ -37,6 +39,13 @@ button {
   border-radius: 0.5em;
   padding: 0.5em 1em;
   cursor: pointer;
+  text-decoration: none;
+}
+
+a.small {
+  font-size: smaller;
+  text-decoration: none;
+  color: #000A;
 }
 
 /*main {*/
